Add more explanatory intro

--- a/ML/spam_ham.ipynb
+++ b/ML/spam_ham.ipynb
@@ -7,7 +7,10 @@
    "source": [
     "## Machine learning\n",
     "### We train a model on labeled spam and ham emails so it can learn patterns and classify new messages.\n",
-    "#### This is supervised learning for text classification, using a Multinomial Naive Bayes algorithm.\n"
+    "#### This is supervised learning for text classification, using a Multinomial Naive Bayes algorithm.\n",
+    "#### Observations: each email/message in the `texts` list.\n",
+    "#### Labels/target: each value in `labels` (spam or ham).\n",
+    "#### Features: TF-IDF vectors computed from the text.\n"
    ]
   },
   {
