Add pandas data summary

--- a/ML/spam_ham.ipynb
+++ b/ML/spam_ham.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 109,
    "id": "b1cc27cc",
    "metadata": {},
    "outputs": [],
@@ -24,12 +24,13 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer  # Turn text into TF-IDF features\n",
     "from sklearn.naive_bayes import MultinomialNB  # Naive Bayes classifier for text\n",
     "from sklearn.pipeline import Pipeline  # Chain vectorizer + model\n",
-    "from sklearn.metrics import classification_report  # Metrics summary for predictions\n"
+    "from sklearn.metrics import classification_report  # Metrics summary for predictions\n",
+    "import pandas as pd  # Tabular display\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 110,
    "id": "f26ef99e",
    "metadata": {},
    "outputs": [],
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 111,
    "id": "22fe1cf6",
    "metadata": {},
    "outputs": [],
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 112,
    "id": "cd41f9e2",
    "metadata": {},
    "outputs": [
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 113,
    "id": "729d1145",
    "metadata": {},
    "outputs": [
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 114,
    "id": "67448a49",
    "metadata": {},
    "outputs": [],
@@ -141,21 +142,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 115,
    "id": "6b8587a3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Congratulations! You've won a free ticket to Bahamas. Click here to claim your prize. -> spam\n",
-      "Reminder: Your appointment with Dr. Smith is scheduled for tomorrow at 10 AM. -> ham\n",
-      "Get paid to work from home! Sign up now and start earning money quickly. -> spam\n",
-      "Don't forget to submit your project report by the end of the week. -> ham\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "new_texts = [\n",
     "\"Congratulations! You've won a free ticket to Bahamas. Click here to claim your prize.\",\n",
@@ -163,6 +153,56 @@
     "\"Get paid to work from home! Sign up now and start earning money quickly.\",\n",
     "\"Don't forget to submit your project report by the end of the week.\",\n",
     "]  # New messages to classify\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "80cf6e83",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                          Each email/message in texts\n",
+       "1                   Each entry in labels (spam or ham)\n",
+       "2    TF-IDF vectors from TfidfVectorizer (term weig...\n",
+       "Name: Description, dtype: object"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summary.Description\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "2e94175e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3 entries, 0 to 2\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column       Non-Null Count  Dtype \n",
+      "---  ------       --------------  ----- \n",
+      " 0   Item         3 non-null      object\n",
+      " 1   Description  3 non-null      object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 180.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "summary.info()"
    ]
   }
  ],
